--- a/RV32_Lsu/RV32_LoatStoreUnit.csproj
+++ b/RV32_Lsu/RV32_LoatStoreUnit.csproj
@@ -49,9 +49,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Exceptions\Exceptions.csproj">
+    <ProjectReference Include="..\Exceptions\Constants.csproj">
       <Project>{93868cf5-de52-462d-be72-1c70b0ae987c}</Project>
-      <Name>Exceptions</Name>
+      <Name>Constants</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
