--- a/RV32_Alu/RV32_Calculator.csproj
+++ b/RV32_Alu/RV32_Calculator.csproj
@@ -49,9 +49,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Exceptions\Exceptions.csproj">
+    <ProjectReference Include="..\Exceptions\Constants.csproj">
       <Project>{93868cf5-de52-462d-be72-1c70b0ae987c}</Project>
-      <Name>Exceptions</Name>
+      <Name>Constants</Name>
     </ProjectReference>
     <ProjectReference Include="..\RV32_Lsu\RV32_LoatStoreUnit.csproj">
       <Project>{fa819d4a-5080-468f-a2b9-b80fb581cd41}</Project>
