--- a/RV32_Cpu/RV32_Cpu.csproj
+++ b/RV32_Cpu/RV32_Cpu.csproj
@@ -62,6 +62,8 @@
   <ItemGroup>
     <Compile Include="BitByteConverter.cs" />
     <Compile Include="Decoder\Constants\InstructionConstants.cs" />
+    <Compile Include="Decoder\RV32F_Decoder.cs" />
+    <Compile Include="Decoder\RV32D_Decoder.cs" />
     <Compile Include="Decoder\RV32C_Decoder.cs" />
     <Compile Include="Decoder\RV32I_Decoder.cs" />
     <Compile Include="Decoder\RV32A_Decoder.cs" />
