--- a/RV32_Cpu/RV32_Cpu.csproj
+++ b/RV32_Cpu/RV32_Cpu.csproj
@@ -99,9 +99,9 @@
       <Project>{28c36aee-cd6d-4185-80c9-142d86e5b585}</Project>
       <Name>RV32_Alu</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RV32_Lsu\RV32_LoatStoreUnit.csproj">
+    <ProjectReference Include="..\RV32_Lsu\RV32_Lsu.csproj">
       <Project>{fa819d4a-5080-468f-a2b9-b80fb581cd41}</Project>
-      <Name>RV32_LoatStoreUnit</Name>
+      <Name>RV32_Lsu</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
