--- a/RISC-V_CPU_Emulator/RISC-V_CPU_Emulator.csproj
+++ b/RISC-V_CPU_Emulator/RISC-V_CPU_Emulator.csproj
@@ -49,7 +49,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InstructionConverter.cs" />
     <Compile Include="InstructionViewer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="InstructionViewer.resx">
       <DependentUpon>InstructionViewer.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
