--- a/RISC-V_CPU_ConsoleEmulator/RISC-V_CPU_ConsoleEmulator.csproj
+++ b/RISC-V_CPU_ConsoleEmulator/RISC-V_CPU_ConsoleEmulator.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>RISC_V_CPU_ConsoleEmulator</RootNamespace>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
