--- a/RISC-V_CPU_Emulator/RISC-V_CPU_Emulator.csproj
+++ b/RISC-V_CPU_Emulator/RISC-V_CPU_Emulator.csproj
@@ -103,7 +103,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RiscvInstructionDictionry\RISC-V_Instruction.csproj">
+    <ProjectReference Include="..\RISC-V_Instruction\RISC-V_Instruction.csproj">
       <Project>{c59d98ba-b3ef-497b-9f40-ff63fa9725e2}</Project>
       <Name>RISC-V_Instruction</Name>
     </ProjectReference>
