--- a/RV32_Register/RV32_Register.csproj
+++ b/RV32_Register/RV32_Register.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2533C94D-B8BC-4164-8ACC-BBE8E37944A2}</ProjectGuid>
+    <ProjectGuid>{9A6BE135-E566-4D40-A274-FDAE529D5670}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RV32_Decoder</RootNamespace>
-    <AssemblyName>RV32_Decoder</AssemblyName>
+    <RootNamespace>RV32_Register</RootNamespace>
+    <AssemblyName>RV32_Register</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -43,30 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants\InstructionConstants.cs" />
-    <Compile Include="RV32A_Decoder.cs" />
-    <Compile Include="RV32C_Decoder.cs" />
-    <Compile Include="RV32D_Decoder.cs" />
-    <Compile Include="RV32F_Decoder.cs" />
-    <Compile Include="RV32I_Decoder.cs" />
-    <Compile Include="RV32M_Decoder.cs" />
-    <Compile Include="RV32_InstructionDecoder.cs" />
+    <Compile Include="Constants\ControlStatusRegisterConstants.cs" />
+    <Compile Include="Constants\PageTableEntryConstants.cs" />
+    <Compile Include="Constants\RegisterConstants.cs" />
+    <Compile Include="Exceptions\RiscvException.cs" />
+    <Compile Include="MainMemoryHandler\RV32_AtomicMemoryHandler.cs" />
+    <Compile Include="MainMemoryHandler\RV32_MemoryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RV32_ControlStatusRegisters.cs" />
+    <Compile Include="RV32_RegisterSet.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\RV32_Alu\RV32_Alu.csproj">
-      <Project>{28c36aee-cd6d-4185-80c9-142d86e5b585}</Project>
-      <Name>RV32_Alu</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RV32_Lsu\RV32_Lsu.csproj">
-      <Project>{fa819d4a-5080-468f-a2b9-b80fb581cd41}</Project>
-      <Name>RV32_Lsu</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RV32_Register\RV32_Register.csproj">
-      <Project>{9a6be135-e566-4d40-a274-fdae529d5670}</Project>
-      <Name>RV32_Register</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
