--- a/RISC-V_CPU_Emulator/RISC-V_CPU_Emulator.csproj
+++ b/RISC-V_CPU_Emulator/RISC-V_CPU_Emulator.csproj
@@ -99,6 +99,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegisterViewForm.Designer.cs">
+      <DependentUpon>RegisterViewForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ControlStatusRegistersControl.resx">
       <DependentUpon>ControlStatusRegistersControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -144,6 +150,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RegisterViewForm.resx">
+      <DependentUpon>RegisterViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
